游戏阶段配置文件更新