@@ -1,30 +1,36 @@
 package cn.zhuobing.testPlugin.game;
 
+import cn.zhuobing.testPlugin.utils.AnniConfigManager;
 import org.bukkit.boss.BarColor;
 
 import java.util.ArrayList;
 import java.util.List;
 
+/**
+ *  在配置文件中读取 AnniConfigManager.java
+ *  private static void createDefaultPhases() {
+ *         GAME_PHASES.add(new GamePhase("游戏即将开始 请为地图投票", 30, BarColor.BLUE));
+ *         GAME_PHASES.add(new GamePhase("阶段一", 600, BarColor.BLUE));
+ *         GAME_PHASES.add(new GamePhase("阶段二", 600, BarColor.BLUE));
+ *         GAME_PHASES.add(new GamePhase("阶段三", 600, BarColor.BLUE));
+ *         GAME_PHASES.add(new GamePhase("阶段四", 600, BarColor.PURPLE));
+ *         GAME_PHASES.add(new GamePhase("阶段五", 0, BarColor.WHITE));
+ *     }
+ */
+
 public class GamePhaseManager {
     private final List<GamePhase> phases;
 
     public GamePhaseManager() {
-        phases = new ArrayList<>();
-        // 初始化阶段信息
-        phases.add(new GamePhase("游戏即将开始 请为地图投票", 30, BarColor.BLUE));
-        phases.add(new GamePhase("阶段一", 600, BarColor.BLUE));
-        phases.add(new GamePhase("阶段二", 600, BarColor.BLUE));
-        phases.add(new GamePhase("阶段三", 600, BarColor.BLUE));
-        phases.add(new GamePhase("阶段四", 600, BarColor.PURPLE));
-        phases.add(new GamePhase("阶段五", 0, BarColor.WHITE));
+        phases = new ArrayList<>(AnniConfigManager.GAME_PHASES);
     }
 
     public GamePhase getPhase(int index) {
         if (index < 0) {
-            return phases.getFirst();
+            return phases.get(0);
         }
         if (index >= phases.size()) {
-            return phases.getLast();
+            return phases.get(phases.size() - 1);
         }
         return phases.get(index);
     }
